@@ -9,5 +9,6 @@
     
     <replace css:content="#content" css:theme="#content" if="$foo = 'bar'" />
     <replace css:content="#extra" css:theme="#extra" href="/inc.html" />
+    <replace css:content="#esi" css:theme="#esi" href="/esi.html" method="esi" />
 
 </rules>
