@@ -16,6 +16,7 @@ pipeline = theme
 use = egg:diazo
 rules = %(here)s/rules.xml
 prefix = /static
+filter_xpath = true
 
 # Custom parameters
 foo = bar
