@@ -8,5 +8,6 @@
         <h1>Theme title</h1>
         <div id="content">Theme content</div>
         <div id="extra">Theme extra</div>
+        <div id="esi">Theme ESI</div>
     </body>
 </html>
