@@ -1,0 +1,10 @@
+<rules
+    xmlns="http://namespaces.plone.org/diazo"
+    xmlns:css="http://namespaces.plone.org/diazo/css"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+    <theme href="theme.html" />
+    
+    <replace css:theme="#content" css:content="#content" href="/other.html" method="esi" />
+    
+</rules>
