@@ -4,6 +4,8 @@ Changelog
 1.0rc3 - Unreleased
 -------------------
 
+* Support for ``filter_xpath`` requests for ESI/SSI includes.
+
 * Do not try to transform HEAD requests, otherwise you get:
   ``XMLSyntaxError: no element found``.
   [maurits]
